Fixes member spacing on Firefox

--- a/app/_scss/pages/members.scss
+++ b/app/_scss/pages/members.scss
@@ -14,7 +14,7 @@
 
 		figure {
 			display: inline-block;
-			width: 26%;
+			width: 25%; /* Firefox needs 25% */
 			margin: 2.4% 3.5% 6% 3.5%;
 			text-align: center;
 		}
